added routes to get rankers and miners by their id
